newly made changes

--- a/index.html
+++ b/index.html
@@ -12,17 +12,12 @@
 <body>
   <div id="myDIV" class="header">
     <h1 style="margin: 5px;">My To Do List</h1>
-    <input type="text" id="myInput" placeholder="Title...">
-    <span onclick="newElement()" class="addBtn">Add</span>
+    <input type="text" id="myInput" placeholder="Add to do...">
+    <span onclick="newElement()" class="addBtn">SUBMIT</span>
   </div>
 
   <ul id="myUL">
-    <li>Hit the gym</li>
-    <li class="checked">Pay bills</li>
-    <li>meet friends</li>
-    <li>watch a movie</li>
-    <li>Read a book</li>
-    <li>attend a poetry session</li>
+
   </ul>
 
   <script>
