--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
   <link rel="stylesheet" href="index.css">
-
+  <script src="index.js" defer></script>
 
   <title>ToDo App</title>
 </head>
@@ -21,7 +22,7 @@
 
   </ul>
 
-  <script>
+ <!-- <script>
     var myNodelist = document.getElementsByTagName("LI");
     var i;
     for (i = 0; i < myNodelist.length; i++) {
@@ -76,7 +77,7 @@
         }
       }
     }
-  </script>
+  </script> -->
 
 </body>
 
