--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
+
   <link rel="stylesheet" href="index.css">
   <script src="index.js" defer></script>
 
@@ -14,7 +14,7 @@
 <body>
   <div id="myDIV" class="header">
     <h1 style="margin: 5px;">My To Do List</h1>
-    <input type="text" id="myInput" placeholder="Add to do...">
+    <input type="text" id="myInput" placeholder="What do you want to do?...">
     <span onclick="newElement()" class="addBtn">SUBMIT</span>
   </div>
 
@@ -22,7 +22,7 @@
 
   </ul>
 
- <!-- <script>
+  <!-- <script>
     var myNodelist = document.getElementsByTagName("LI");
     var i;
     for (i = 0; i < myNodelist.length; i++) {
